# ELO-Ranking-Calculator

./: .breakpoints  ELO_to_100.py  README.md  main.py  pyproject.toml  random_input_generator.py
input/: fantasy_football.csv  matches.csv
output/: ELO_to_100_ranking.csv  RAM_BMCL_ranking.csv  fantasy_football_ranking.csv  random2_ranking.csv  random_ranking.csv  ranking.csv
