[tool.poetry]
name = "python3_Elo-Ranking-Calculator"
version = "0.1.0"
description = ""
authors = ["EinGuterWaran <<Janu@Lingeswaran.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
py-random-words = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
